--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,14 @@
         "ext-json": "*",
         "ext-pcntl": "*",
         "ext-posix": "*",
+        "aws/aws-sdk-php": "^3.279",
         "illuminate/contracts": "^8.17|^9.0|^10.0",
         "illuminate/queue": "^8.17|^9.0|^10.0",
         "illuminate/support": "^8.17|^9.0|^10.0",
         "nesbot/carbon": "^2.17",
         "ramsey/uuid": "^4.0",
-        "symfony/process": "^5.0|^6.0",
-        "symfony/error-handler": "^5.0|^6.0"
+        "symfony/error-handler": "^5.0|^6.0",
+        "symfony/process": "^5.0|^6.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
